--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend</title>
   </head>
-  <body class="overflow-x-hidden">
+  <body
+    class="h-dvh overflow-x-hidden bg-[url('./assets/driving-car.jpg')] bg-cover bg-center bg-no-repeat"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
