--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>frontend</title>
   </head>
   <body class="overflow-x-hidden">
-    <div id="root"></div>
+    <div id="root" class="flex min-h-screen flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
