Se agregó el logo de la pestaña del navegador y el título

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg" href="./src/assets/donut-homero.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Sharps - Alquiler de vehículos</title>
   </head>
   <body class="overflow-x-hidden">
     <div id="root" class="flex min-h-screen flex-col"></div>
