Cambios en los estilos de la página de registro

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="scrollbar-gutter: stable">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg" href="./src/assets/donut-homero.svg" />
@@ -7,7 +7,7 @@
     <title>Sharps - Alquiler de vehículos</title>
   </head>
   <body class="overflow-x-hidden">
-    <div id="root" class="flex flex-col"></div>
+    <div id="root" class="flex h-dvh flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
